--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JankenApp">
         <activity
+            android:name=".Difficulty2"
+            android:exported="false" />
+        <activity
+            android:name=".aiueo"
+            android:exported="false" />
+        <activity
             android:name=".Endless"
             android:exported="false" />
         <activity
