--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,19 @@
         <activity
             android:name=".Rule2"
             android:exported="false" />
+            android:screenOrientation="portrait"
         <activity
             android:name=".Difficulty2"
             android:exported="false" />
+            android:screenOrientation="portrait"
         <activity
             android:name=".Endless"
             android:exported="false" />
+            android:screenOrientation="portrait"
         <activity
             android:name=".Title"
             android:exported="true">
+            android:screenOrientation="portrait"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
